--- a/software.html
+++ b/software.html
@@ -39,8 +39,20 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/ringcentral/job/ofQrbfwr'>RingCentral Careers - Senior Software Engineer (Multiple Openings)</a></h5> 
+<p><span class="badge badge-light">California</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/ringcentral/job/ovXrbfwO'>RingCentral Careers - Ruby / Ruby on Rails Software Engineer</a></h5> 
+<p><span class="badge badge-light">Paris, France  Paris</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/ringcentral/job/ozXrbfwS'>RingCentral Careers - Ruby / Ruby on Rails Software Engineer</a></h5> 
+<p><span class="badge badge-light">Paris, France  Paris  Paris</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/bigbear/728ab72d-676d-44fd-884d-c66ccff505f9'>BigBear - Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://slack.com/intl/en-in/careers/1806534/sr-software-engineer-android'>Sr. Software Engineer, Android | Careers | Slack</a></h5> 
@@ -119,7 +131,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-software-developer-14094'>Senior Software Developer - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-software-developer-14094'>Senior Software Developer - Experian Careers</a></h5> 
 <p><span class="badge badge-light">Tennessee United States  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -183,7 +195,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3mnyo9otg71mzie1mr6po7n8do'>Senior Software Engineer | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3mnyo9otg71mzie1mr6po7n8do'>Senior Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -265,7 +277,7 @@
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drchrono/5e6ddbb2-d226-463d-b9a6-c2887bd76b05'>DrChrono - Director of Software Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/5e6ddbb2-d226-463d-b9a6-c2887bd76b05'>DrChrono - Director of Software Engineering</a></h5> 
 <p><span class="badge badge-light">Hunt Valley, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -277,7 +289,7 @@
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Hunt Valley, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -319,11 +331,11 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://pexapark.join.com/jobs/473704-software-engineer'>Job @ Pexapark (Z?rich): Software Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pexapark.join.com/jobs/473704-software-engineer'>Job @ Pexapark (Z?rich): Software Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/launchdarkly/448af03f-706a-4c10-804a-4d7bb4684c69?lever-via=236wXdLYZc'>LaunchDarkly - Software Engineer, Frontend</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/launchdarkly/448af03f-706a-4c10-804a-4d7bb4684c69?lever-via=236wXdLYZc'>LaunchDarkly - Software Engineer, Frontend</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -331,7 +343,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.orizon.de/de/job/software-engineer-edrs-m-f-d-ottobrunn-11994'>Software Engineer EDRS (m/f/d) in Ottobrunn - Orizon GmbH</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.orizon.de/de/job/software-engineer-edrs-m-f-d-ottobrunn-11994'>Software Engineer EDRS (m/f/d) in Ottobrunn - Orizon GmbH</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -387,7 +399,7 @@
 <p><span class="badge badge-light">Seattle, Washington  San Francisco, California  Chicago, Illinois  St. Louis, Missouri</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/servicenow/job/oGYrbfw0'>ServiceNow Careers - Staff Software Engineer - Quality Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/servicenow/job/oGYrbfw0'>ServiceNow Careers - Staff Software Engineer - Quality Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -411,7 +423,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://aciworldwide.referrals.selectminds.com/jobs/sr-software-engineer-3097'>Sr Software Engineer - ACI Worldwide Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aciworldwide.referrals.selectminds.com/jobs/sr-software-engineer-3097'>Sr Software Engineer - ACI Worldwide Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -423,24 +435,12 @@
 <p><span class="badge badge-light">Portland, Oregon  Portland, Oregon</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/incontact/job/oG6sbfw9'>NICE inContact Careers - Senior Specialist Software Engineer Java & AWS</a></h5> 
+<h5><a href='https://jobs.jobvite.com/incontact/job/oG6sbfw9'>NICE inContact Careers - Senior Specialist Software Engineer Java & AWS</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oohYafwx&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=n6AZpMwl'>Cirrus Logic Careers - Embedded ARM Software Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='http://hangar.applytojob.com/apply/jPr1KFzP0h/Sr-Software-Engineer'>Sr. Software Engineer - Hangar - Career Page</a></h5> 
-<p><span class="badge badge-light">Austin, TX</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ZARecruiting/743999698605781-software-engineer-ii-global-fortune-company'>Z&A Recruiting Software Engineer II ? Global Fortune Company | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://www.ndt.com/job/senior-software-engineer-8498BK'>Senior Software Engineer  | NDT</a></h5> 
-<p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 
